# tomlforge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_features.py  test_parser.py
tests/convert/: convert_test.go
tests/diff/: diff_test.go
tests/format/: format_test.go
tests/merge/: merge_test.go
tests/models/: models_test.go
tests/parser/: parser_test.go
tests/query/: query_test.go
tests/stats/: stats_test.go
tests/validate/: validate_test.go
tomlforge/: __init__.py  cli.py  converter.py  diff.py  formatter.py  merge.py  parser.py  query.py  validator.py
