[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomlforge"
version = "0.1.0"
description = "TOML Processing Toolkit — parse, query, diff, merge, convert, validate, and format TOML files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "EdgarOrtegaRamirez" },
]
keywords = ["toml", "parser", "converter", "linter", "diff", "merge", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1.0,<9.0.0",
    "rich>=13.0.0,<16.0.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0,<8.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.10",
]

[project.scripts]
tomlforge = "tomlforge.cli:main"

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/tomlforge"
Repository = "https://github.com/EdgarOrtegaRamirez/tomlforge"
Issues = "https://github.com/EdgarOrtegaRamirez/tomlforge/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
